--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "date-fns": "^3.6.0",
     "lucide-react": "^0.436.0",
     "next": "14.2.6",
+    "next-pwa": "^5.6.0",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
